--- a/packages/nouns-webapp/package.json
+++ b/packages/nouns-webapp/package.json
@@ -82,7 +82,10 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "@typescript-eslint/no-unused-vars": "off"
+    }
   },
   "browserslist": {
     "production": [
