--- a/netlify.toml
+++ b/netlify.toml
@@ -1,18 +1,20 @@
 [context.production.environment]
-  REACT_APP_CHAIN_ID = "1"
+  REACT_APP_CHAIN_ID = "1666600000"
   REACT_APP_ENABLE_HISTORY = "true"
-
-[context."staging".environment]
-  REACT_APP_CHAIN_ID = "1"
-  REACT_APP_ENABLE_HISTORY = "true"
+  REACT_APP_HARMONY_JSONRPC = "https://a.api.s0.t.hmny.io"
+  REACT_APP_HARMONY_WSRPC = "wss://ws.s0.t.hmny.io/"
 
 [context."master".environment]
-  REACT_APP_CHAIN_ID = "5"
+  REACT_APP_CHAIN_ID = "1666600000"
   REACT_APP_ENABLE_HISTORY = "true"
+  REACT_APP_HARMONY_JSONRPC = "https://a.api.s0.t.hmny.io"
+  REACT_APP_HARMONY_WSRPC = "wss://ws.s0.t.hmny.io/"
 
 [context.deploy-preview.environment]
-  REACT_APP_CHAIN_ID = "1"
+  REACT_APP_CHAIN_ID = "1666600000"
   REACT_APP_ENABLE_HISTORY = "true"
+  REACT_APP_HARMONY_JSONRPC = "https://a.api.s0.t.hmny.io"
+  REACT_APP_HARMONY_WSRPC = "wss://ws.s0.t.hmny.io/"
 
 [functions]
   directory = "packages/nouns-webapp/functions"
